--- a/templates/index.html
+++ b/templates/index.html
@@ -12,12 +12,10 @@
     <!-- Container for the index page content -->
     <div class="index-container">
         <h2>Welcome to the Flask Application</h2>
-
-        <!-- Links to login and register pages -->
-        <a href="{{ url_for('register') }}">Register</a>
-        <a href="{{ url_for('login') }}">Login</a>
-        
+        <a href="/register">Register</a>
+        <a href="/login">Login</a>
     </div>
+    
 
     <!-- Footer section -->
     <div class="footer">
